# NativeYtDownloader

./: CMakeLists.txt
.github/workflows/: deploy.yml
includes/: initialize.hpp  os.hpp  process_builder.hpp  yt_dlp.hpp
libs/: CMakeLists.txt
src/: initialize.cpp  main.cpp  process_builder.cpp  yt_dlp.cpp
